[package]
name = "rtlp-lib"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
authors = ["Maciej Grochowski <maciej.grochowski@pm.me>"]
license = "BSD-3-Clause"
description = "Rust library for parsing PCI Express Transaction Layer Packets (TLPs)"
repository = "https://github.com/mmpg-x86/rust_tlplib"
documentation = "https://docs.rs/rtlp-lib"
readme = "README.md"
keywords = ["pcie", "tlp", "pci-express", "parser", "hardware"]
categories = ["hardware-support", "parser-implementations"]

[dependencies]
bitfield = "0.14.0"
