[package]
name = "rtlp-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rtlp-lib]
path = ".."

[[bin]]
name = "fuzz_packet"
path = "fuzz_targets/fuzz_packet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_constructors"
path = "fuzz_targets/fuzz_constructors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pipeline"
path = "fuzz_targets/fuzz_pipeline.rs"
test = false
doc = false
bench = false
